en/3.0/admin/design-guide.rst
===================
Appearance settings
===================

This page is generated by Machine Translation from Japanese.

Appearance settings
===================

Here are settings for the design of search screens.

How to set up
-------------

In Administrator account after logging in, click the menu design.

|image0|

You can edit the search screen in the screen below.

|image1|

Image file
----------

You can upload the image files to use in the search screen. Image file
names are supported are jpg, gif and png.

Image file name
---------------

If you want the file name to upload image files to use. Uploaded if you
omit the file name will be used.

Design JSP files
----------------

You can edit the JSP files in the search screen. You can by pressing the
Edit button of the JSP file, edit the current JSP files. And pressing
the button will default to edit as a JSP file when you install. To keep
with the update button in the Edit screen, changes are reflected.

Following are examples of how to write.

+----------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Top page (frame)                             | Is a JSP file search home page. This JSP include JSP file of each part.                                                                                                                   |
+----------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Top page (within the Head tags)              | This is the express search home page head tag in JSP files. If you want to edit the meta tags, title tags, script tags, such as the change.                                               |
+----------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Top page (content)                           | Is a JSP file to represent the body tag in the search home page.                                                                                                                          |
+----------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Search results pages (frames)                | Search result is a list page of JSP files. This JSP include JSP file of each part.                                                                                                        |
+----------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Search results page (within the Head tags)   | Search result is a JSP file to represent within the head tag of the list page. If you want to edit the meta tags, title tags, script tags, such as the change.                            |
+----------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Search results page (header)                 | Search result is a JSP file to represent the header of the list page. Include search form at the top.                                                                                     |
+----------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Search results page (footer)                 | Search result is a JSP file that represents the footer part of the page. Contains the copyright page at the bottom.                                                                       |
+----------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Search results pages (content)               | Search results search results list page is a JSP file to represent the part. Is the search results when the JSP file. If you want to customize the search result representation change.   |
+----------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Search results page (result no)              | Search results search results list page is a JSP file to represent the part. Is a JSP file when the search result is not used.                                                            |
+----------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+

You can to edit for PCs and similar portable screen.

How to set up
=============

To view the registration date and modified date
-----------------------------------------------

If you want to display in the search results crawl in |Fess| and
registered or modified files to get the search results page (content),
write the following.

::

        :
        :
            <ol>
    <c:forEach var="doc" varStatus="s" items="${documentItems}">
    <%
    java.util.Map docMap = (java.util.Map)pageContext.getAttribute("doc");
    Long tstampValue = (Long)docMap.get("tstamp");
    java.util.Date tstampDate = new java.util.Date(tstampValue);
    Long lastModifiedValue = (Long)docMap.get("lastModified");
    java.util.Date lastModifiedDate = new java.util.Date(lastModifiedValue);
    java.text.SimpleDateFormat sdf = new java.text.SimpleDateFormat("yyyy/MM/dd HH:mm");
    %>
                <li>
                    <h3 class="title">
                        <a href="${doc.urlLink}">${f:h(doc.contentTitle)}</a>
                    </h3>
                    <div class="body">
    ${doc.contentDescription}               
                        <br/>
                        <cite>${f:h(doc.site)}</cite>
    <br>Registered: <%= sdf.format(tstampDate) %>
    <br>Last Modified: <%= sdf.format(lastModifiedDate) %>
        :
        :

tstampDate will update on registration date, lastModifiedDate. Output
date format is specified in SimpeDateFormat.

.. |image0| image:: ../../../resources/images/en/3.0/design-1.png
.. |image1| image:: ../../../resources/images/en/3.0/design-2.png
